2019-08-26  Youenn Fablet  <youenn@apple.com>

        Add a WebsiteDataStore delegate to handle AuthenticationChallenge that do not come from pages
        https://bugs.webkit.org/show_bug.cgi?id=196870
        <rdar://problem/54593556>

        Reviewed by Alex Christensen.

        * web-platform-tests/service-workers/service-worker/websocket-in-service-worker.https-expected.txt:

2019-08-22  Ryosuke Niwa  <rniwa@webkit.org>

        Implement StaticRange constructor
        https://bugs.webkit.org/show_bug.cgi?id=201055

        Reviewed by Wenson Hsieh.

        Added a test from https://github.com/web-platform-tests/wpt/pull/18619
        with my review comment addressed.

        * web-platform-tests/dom/interfaces-expected.txt: Rebaselined.
        * web-platform-tests/dom/ranges/StaticRange-constructor-expected.txt: Added.
        * web-platform-tests/dom/ranges/StaticRange-constructor.html: Added.

2019-08-21  Ryosuke Niwa  <rniwa@webkit.org>

        Put keygen element behind a runtime flag and disable it by default
        https://bugs.webkit.org/show_bug.cgi?id=200850

        Reviewed by Antti Koivisto.

        Re-sycned htmlformcontrolscollection.html as of ffc0fba7d4063f0fb063b9a215dd9ef7fedefebd.

        * web-platform-tests/html/dom/documents/dom-tree-accessors/document.getElementsByName/document.getElementsByName-newelements-expected.txt:
        Rebaselined due to the whitespace change due to the keygen element rendering differently.
        * web-platform-tests/html/dom/documents/dom-tree-accessors/document.getElementsByName/document.getElementsByName-newelements-xhtml-expected.txt:
        Ditto.
        * web-platform-tests/html/infrastructure/common-dom-interfaces/collections/htmlformcontrolscollection-expected.txt:
        * web-platform-tests/html/infrastructure/common-dom-interfaces/collections/htmlformcontrolscollection.html: