@@ -989,7 +989,11 @@
         "web-platform-tests/html/browsers/the-window-object/garbage-collection-and-browsing-contexts/non-automated/discard_iframe_history_2-2.html",
         "web-platform-tests/html/browsers/the-window-object/garbage-collection-and-browsing-contexts/non-automated/discard_iframe_history_2-3.html",
         "web-platform-tests/html/browsers/the-window-object/named-access-on-the-window-object/test.html",
+        "web-platform-tests/html/browsers/the-window-object/support/BarProp-target.html",
+        "web-platform-tests/html/browsers/the-window-object/support/closed.html",
         "web-platform-tests/html/browsers/the-window-object/support/noopener-target.html",
+        "web-platform-tests/html/browsers/the-window-object/support/noreferrer-target.html",
+        "web-platform-tests/html/browsers/the-window-object/support/sizing-target.html",
         "web-platform-tests/html/browsers/windows/browsing-context-names/001-1.html",
         "web-platform-tests/html/browsers/windows/browsing-context-names/002-1.html",
         "web-platform-tests/html/browsers/windows/browsing-context-names/existing.html",
