@@ -1,0 +1,1 @@
+<!-- This file is required for WebKit test infrastructure to run the templated test -->
