@@ -1,0 +1,4 @@
+
+FAIL window.open() with noopener should have equal viewport width and height Can't find variable: BroadcastChannel
+FAIL window.open() with noreferrer should have equal viewport width and height Can't find variable: BroadcastChannel
+
