@@ -1,7 +1,7 @@
 The tests in this directory were imported from the W3C repository.
 Do NOT modify these tests directly in WebKit.
 Instead, create a pull request on the WPT github:
-	https://github.com/w3c/web-platform-tests
+	https://github.com/web-platform-tests/wpt
 
 Then run the Tools/Scripts/import-w3c-tests in WebKit to reimport
 
@@ -14,4 +14,8 @@ Property values requiring vendor prefixes:
 None
 ------------------------------------------------------------------------
 List of files:
+/LayoutTests/imported/w3c/web-platform-tests/html/browsers/the-window-object/support/BarProp-target.html
+/LayoutTests/imported/w3c/web-platform-tests/html/browsers/the-window-object/support/closed.html
 /LayoutTests/imported/w3c/web-platform-tests/html/browsers/the-window-object/support/noopener-target.html
+/LayoutTests/imported/w3c/web-platform-tests/html/browsers/the-window-object/support/noreferrer-target.html
+/LayoutTests/imported/w3c/web-platform-tests/html/browsers/the-window-object/support/sizing-target.html
