@@ -1,4 +1,4 @@
-CONSOLE MESSAGE: line 117: testError: special target must be one of: _self, _parent, _top
+CONSOLE MESSAGE: line 120: testError: special target must be one of: _self, _parent, _top
 
 FAIL window.open() with "noopener" tests testError: special target must be one of: _self, _parent, _top
 
